--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -1218,4 +1218,6 @@
     <string name="display_settings_calendar">Calendario</string>
     <string name="updatemedialibtitle">aggiornamento mediathek</string>
     <string name="updatemedialibmsg">Si prega di attendere un momento</string>
+    <string name="epd_full_timeout">timeout completo di ricolorazione</string>
+    <string name="epd_full_timeout_summary">Regolare il ritardo prima di dipingere automaticamente completamente</string>
 </resources>
