--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1161,4 +1161,13 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Llamadas entrantes"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Notificaciones"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Respuesta del teléfono"</string>
+    <string name="nand_format">Eliminación memoria</string>
+    <string name="nand_unavailable">No disponible</string>
+    <string name="autoshutdown">apagamento automatico</string>
+    <string name="autoshutdown_timeout_summary">Ajustes de apagado automático</string>
+    <string name="shutdown">apagamento automatico</string>
+    <string name="updatemedialibtitle">actualización Mediateca</string>
+    <string name="updatemedialibmsg">Por favor espere un momento</string>
+    <string name="drm_settings">DRM sistema</string>
+    <string name="device_info_str">Contiene tecnología Reader ® Mobile de Adobe System Incorporated</string>
 </resources>
