--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1219,4 +1219,16 @@
     <string name="exit_compatibility_mode">Exécuter en mode normal</string>
     <string name="rockchip_compatibility_info">Cette application est exécutée en mode compatibilité.</string>
     <string name="rockchip_normal_info">Cette application est exécutée en mode normal.</string>
+    <string name="nand_memory">NAND flash</string>
+    <string name="nand_eject">Démonter le NAND flash</string>
+    <string name="nand_eject_summary">Démonter le e NAND flash afin de le retirer en toute sécurité</string>
+    <string name="nand_insert_summary">Insérer un NAND flash pour montage</string>
+    <string name="nand_mount">Monter le NAND flash</string>
+    <string name="nand_mount_summary">Monter le NAND flash</string>
+    <string name="nand_format">Effacer mémoire flash NAND</string>
+    <string name="nand_format_summary">"Effacer toutes les données de l'appareil NAND flash, telles que la musique et les photos"</string>
+    <string name="nand_unavailable">Non disponible</string>
+    <string name="media_format_desc_nand">Cette action efface la mémoire de masse interne. Vous perdrez <b>toutes</b>" les données enregistrées ici! "</string>
+    <string name="media_format_nand_button_text">Effacer la mémoire de masse interne</string>
+    <string name="media_format_final_desc_nand">Effacer la mémoire de masse interne en supprimant toutes les données enregistrées dedans? Cette opération ne peut être annulée!</string>
 </resources>
