--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -611,11 +611,13 @@
     <string name="master_clear_summary" msgid="4986154238001088492">"清除设备上的所有数据"</string>
     <string name="master_clear_desc" product="nosdcard" msgid="2163013814299528247">"这会清除您手机的"<b>"内部存储设备"</b>"中的全部数据，包括："\n\n<li>"您的 Google 帐户"</li>\n<li>"系统和应用程序数据和设置"</li>\n<li>"已下载的应用程序"</li>\n\n"要清除手机中的全部数据，请格式化 "<b>"USB 存储设备"</b>"。"\n\n</string>
     <string name="master_clear_desc" product="default" msgid="1741944496458365969">"这会清除您设备的"<b>"内部存储设备"</b>"中的全部数据，包括："\n\n<li>"您的 Google 帐户"</li>\n<li>"系统和应用程序数据和设置"</li>\n<li>"已下载的应用程序"</li>\n\n"要清除音乐、照片和其他用户数据，请格式化 "<b>"SD 卡"</b>"。"\n\n</string>
+    <string name="master_clear_desc_jc">这会清除您设备的<b>内部存储设备</b>"中的全部数据，包括：\n\n"<li>您的 Google 帐户</li>"\n"<li>系统和应用程序数据和设置</li>"\n"<li>已下载的应用程序</li>"\n"<li>您存放在存储设备中的书籍、音乐、照片和其他用户数据</li></string>
     <string name="erase_external_storage" product="nosdcard" msgid="969364037450286809">"格式化 USB 存储设备"</string>
     <string name="erase_external_storage" product="default" msgid="1397239046334307625">"格式化 SD 卡"</string>
     <string name="erase_external_storage_description" product="nosdcard" msgid="1657838142707381027">"清除手机的内部 USB 存储设备中的全部数据，例如音乐或照片。"</string>
     <string name="erase_external_storage_description" product="default" msgid="8100175974635894073">"清除设备的 SD 卡中的全部数据，例如音乐或照片。"</string>
     <string name="master_clear_button_text" msgid="7550632653343157971">"重置设备"</string>
+    <string name="master_clear_button_text_jc">数据清理</string>
     <string name="master_clear_final_desc" msgid="6917971132484622696">"是否删除所有个人信息和下载的所有应用程序？此操作无法还原！"</string>
     <string name="master_clear_final_button_text" msgid="5390908019019242910">"清除全部内容"</string>
     <string name="master_clear_gesture_prompt" msgid="1428645764883536750">"绘制您的解锁图案"</string>
