--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4463,7 +4463,21 @@
     <string name="loading">loading......</string>
     <string name="loading_error">Loading Error</string>
     <string name="rebooting">Rebooting...</string>
+    <string name="network_inactivity_timeout_summary">Turn off WiFi automatically during reading after network inactivity in:</string>
+    <string name="network_inactivity_timeout">Network Inactivity Timeout</string>
     <string name="please_wait">Please wait...</string>
+    <string name="network_inactivity_default">Default</string>
+    <string name="network_inactivity_browser">Browser</string>
+    <string name="network_inactivity_default_summary">Auto turn off WiFi with network inactivity for %1$s minutes.</string>
+    <string name="network_inactivity_browser_summary">Auto turn off WiFi with network inactivity in browser for %1$s minutes.</string>
+    <string name="epd_full_timeout">Fully refresh timeout</string>
+    <string name="epd_full_timeout_summary">Adjust the delay before fully refresh automatically</string>
+    <string name="power_off_timeout">Power off timeout</string>
+    <string name="power_off_timeout_summary">The timeout to power off automatically after entering standby mode</string>
+    <string name="refresh_mode">Refresh mode</string>
+    <string name="refresh_mode_summary">Select different mode for screen refreshing</string>
+    <string name="wifi_setup_previous">Previous</string>
+    <string name="power_management">Power management</string>
     <string name="key_mapping">Key mapping</string>
     <string name="key_map_options">Key mapping options</string>
     <string name="memory_size_special_four_gb">4.00GB</string>
