--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -716,8 +716,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"Při otáčení telefonu automaticky přepínat orientaci"</string>
     <string name="brightness" msgid="2354961343555249270">"Jas"</string>
     <string name="brightness_summary" msgid="838917350127550703">"Nastavení jasu displeje"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"Režim spánku"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"Doba nečinnosti: <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g>"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"Interval vypnutí obrazovky"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"Nastavení prodlevy, po které se obrazovka automaticky vypne"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"Tapeta"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"Vybrat tapetu:"</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"Spořič obrazovky"</string>
