--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -717,8 +717,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"Ausrichtung beim Drehen des Telefons automatisch ändern"</string>
     <string name="brightness" msgid="2354961343555249270">"Helligkeit"</string>
     <string name="brightness_summary" msgid="838917350127550703">"Helligkeit des Bildschirms anpassen"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"Ruhezustand"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"Nach <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> ohne Aktivität"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"Display-Timeout"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"Verzögerung vor automatischer Bildschirmabschaltung anpassen"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"Hintergrund"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"Hintergrund auswählen"</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"Daydream"</string>
