--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -716,8 +716,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"Changer automatiquement d\'orientation lors de la rotation du téléphone"</string>
     <string name="brightness" msgid="2354961343555249270">"Luminosité"</string>
     <string name="brightness_summary" msgid="838917350127550703">"Régler la luminosité de l\'écran"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"Veille"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"Après <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> d\'inactivité"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"VMise en veille de l'écran"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"Définir le délai avant la mise hors tension automatique de l'écran"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"Fond d\'écran"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"Sélectionner fond d\'écran dans"</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"Écran de veille interactif"</string>
