--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -716,8 +716,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"Cambia automatic. l\'orientamento quando il cell. viene ruotato"</string>
     <string name="brightness" msgid="2354961343555249270">"Luminosità"</string>
     <string name="brightness_summary" msgid="838917350127550703">"Regola la luminosità dello schermo"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"Sospensione"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"Dopo <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> di inattività"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"Timeout schermo"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"Regola il tempo che deve trascorrere prima che lo schermo si spenga automaticamente"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"Sfondo"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"Scegli sfondo da"</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"Daydream"</string>
