--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -718,8 +718,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"画面の向きに合わせて縦横表示を切り替える"</string>
     <string name="brightness" msgid="2354961343555249270">"画面の明るさ"</string>
     <string name="brightness_summary" msgid="838917350127550703">"画面の明るさを調整する"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"スリープ"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"操作が行われない状態で<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g>経過後"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"バックライト消灯"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"画面バックライトを自動消灯するまでの時間"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"壁紙"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"壁紙の選択先:"</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"スクリーンセーバー"</string>
