--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -716,8 +716,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"휴대전화 회전 시 자동으로 방향 바꾸기"</string>
     <string name="brightness" msgid="2354961343555249270">"밝기"</string>
     <string name="brightness_summary" msgid="838917350127550703">"화면 밝기 조정"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"절전 모드"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> 이상 동작이 없을 때"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"화면 시간제한"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"화면 자동 꺼짐 시간 간격 조정"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"배경화면"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"배경화면 선택"</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"화면 보호기"</string>
