--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -716,8 +716,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"Stand automatisch wijzigen als telefoon wordt gedraaid"</string>
     <string name="brightness" msgid="2354961343555249270">"Helderheid"</string>
     <string name="brightness_summary" msgid="838917350127550703">"Helderheid van het scherm aanpassen"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"Slaapstand"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"Na <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> inactiviteit"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"Time-out scherm"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"De vertraging voor het automatisch uitschakelen van het scherm aanpassen"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"Achtergrond"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"Achtergrond kiezen van"</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"Dagdromen"</string>
