--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -716,8 +716,8 @@
     <string name="accelerometer_summary_off" product="default" msgid="5485489363715740761">"Automatycznie przełącz orientację przy obracaniu telefonu"</string>
     <string name="brightness" msgid="2354961343555249270">"Jasność ekranu"</string>
     <string name="brightness_summary" msgid="838917350127550703">"Dostosuj jasność ekranu"</string>
-    <string name="screen_timeout" msgid="4351334843529712571">"Uśpienie"</string>
-    <string name="screen_timeout_summary" msgid="327761329263064327">"Po <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> bezczynności"</string>
+    <string name="screen_timeout" msgid="4351334843529712571">"Wygaszanie ekranu"</string>
+    <string name="screen_timeout_summary" msgid="327761329263064327">"Dostosuj opóźnienie automatycznego wyłączenia ekranu"</string>
     <string name="wallpaper_settings_title" msgid="5449180116365824625">"Tapeta"</string>
     <string name="wallpaper_settings_fragment_title" msgid="519078346877860129">"Wybierz tapetę z..."</string>
     <string name="screensaver_settings_title" msgid="3349790120327233241">"Wygaszacz ekranu"</string>
@@ -1830,4 +1830,17 @@
     <string name="user_picture_title" msgid="7297782792000291692">"Identyfikator zdjęcia"</string>
     <string name="cell_broadcast_settings" msgid="8415582011920085222">"Transmisje komórkowe"</string>
     <string name="cell_broadcast_settings_summary" msgid="3301339398950905913">"Wybierz typy alertów o zagrożeniu, które chcesz wyświetlić."</string>
+
+    <string name="network_inactivity_timeout_summary">Wyłącz WiFi automatycznie podczas czytania po bezczynności sieci w</string>
+    <string name="network_inactivity_timeout">Limit czasu nieaktywności Network</string>
+    <string name="epd_full_timeout">Interwał Pełnego Odświeżenia</string>
+    <string name="epd_full_timeout_summary">Dostosuj opóźnienie automatycznego, pełenego odświeżenia</string>
+    <string name="power_off_timeout">Czas Do Wyłączenia</string>
+    <string name="power_off_timeout_summary">Dostosowanie czasu po którym nastąpi wyłączenie</string>
+    <string name="refresh_mode">tryb odświeżyć</string>
+    <string name="refresh_mode_summary">Wybierz inny tryb odświeżania ekranu</string>
+    <string name="key_mapping">Mapowanie Klawiszy</string>
+    <string name="key_map_options">Opcje Mapowania Klawiszy</string>
+    <string name="wakeup_brightness">Wybudź</string>
+    <string name="wakeup_brightness_summary">Podświetl ekran po wybudzeniu</string>
 </resources>
