--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1210,5 +1210,30 @@
     <string name="set_font_dialog_tile">设置字体</string>
     <string name="reboot_device">确定重启设备吗？</string>
     <string name="rebooting">重启设备中。。。</string>
+    <string name="lockscreen_access_pattern_start">图案启动</string>
+    <string name="lockscreen_access_pattern_cleared">清除图案</string>
+    <string name="lockscreen_access_pattern_cell_added">添加图案</string>
+    <string name="lockscreen_access_pattern_detected">完成图案绘制</string>
+    <string name="lockpattern_tutorial_continue_label">下一步</string>
+    <string name="lockpattern_tutorial_cancel_label">取消</string>
+    <string name="password_error">密码错误，请重新输入。</string>
+    <string name="password_is_empty">密码为空，请输入。</string>
+    <string name="password_save_success">密码保存成功。</string>
+    <string name="lockpattern_pattern_success">解锁成功</string>
+    <string name="lockpattern_pattern_different">两次密码不一致,请重新设置。</string>
+    <string name="button_cancel">取消</string>
+    <string name="button_ok">确定</string>
+    <string name="please_input_password">请输入密码！</string>
+    <string name="input_password">输入密码</string>
+    <string name="confirm_password">确认密码</string>
+    <string name="lock_type_pin">PIN</string>
+    <string name="lock_type_password">密码</string>
+    <string name="lock_type_pattern">图案</string>
+    <string name="please_select_lock_type">请选择保护的功能</string>
+    <string name="please_select_lock_list">请选择密码的类型</string>
+    <string name="lock_list_open_wifi">WiFi功能密码</string>
+    <string name="lock_list_factory_data_reset">恢复出厂设置密码</string>
+    <string name="lock_list_connect_usb_storage">USB存储连接到PC密码</string>
+    <string name="lock_list_access_ext_sd_card">TF卡功能密码</string>
     <string name="serialnumber">序列号</string>
 </resources>
