--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2713,4 +2713,32 @@ found in the list of installed applications.</string>
     <string name="set_font_dialog_tile">Set Font</string>
     <string name="reboot_device">Reboot the device?</string>
     <string name="rebooting">Rebooting...</string>
+    <string name="wifi_setup_back">Previous</string>
+    <string name="wifi_setup_skip">Skip</string>
+    <string name="wifi_setup_next">Next</string>
+    <string name="lockscreen_access_pattern_start">Pattern started</string>
+    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
+    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
+    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
+    <string name="lockpattern_tutorial_continue_label">Next</string>
+    <string name="lockpattern_tutorial_cancel_label">Cancel</string>
+    <string name="password_error">Password incorrect, please input again.</string>
+    <string name="password_is_empty">Password can not be empty</string>
+    <string name="password_save_success">Password saved.</string>
+    <string name="lockpattern_pattern_success">Unlock successfully.</string>
+    <string name="lockpattern_pattern_different">"New password and confirmation don't match"</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="button_ok">OK</string>
+    <string name="please_input_password">Please input password</string>
+    <string name="input_password">Input password</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="lock_type_pin">Pin</string>
+    <string name="lock_type_password">Password</string>
+    <string name="lock_type_pattern">Pattern</string>
+    <string name="please_select_lock_type">Please select lock type</string>
+    <string name="please_select_lock_list">Please select lock list</string>
+    <string name="lock_list_open_wifi">Password to open WiFi</string>
+    <string name="lock_list_factory_data_reset">Password to do Factory data resett</string>
+    <string name="lock_list_connect_usb_storage">Password to connect to USB storage</string>
+    <string name="lock_list_access_ext_sd_card">Password to access SD/TF card</string>
 </resources>
